# langchain-practice

./: .gitignore  README.md  main.py  pyproject.toml  test.py
src/: Structured_output_with_langchain_Pydantic.py
